@@ -170,8 +170,8 @@ extern USI epiphany_post_isn_callback (SIM_CPU *cpu , PCADDR pc) ;
 /* Check if core is active */
 extern int epiphany_cpu_is_active(SIM_CPU *current_cpu);
 
-/* Check if any periphal is active */
-extern bool epiphany_any_periphal_active_p (SIM_CPU *current_cpu);
+/* Check if any peripheral is active */
+extern bool epiphany_any_peripheral_active_p (SIM_CPU *current_cpu);
 
 /* Halt simulation (for user environment) */
 extern void  epiphany_halt_on_inactive(SIM_CPU *current_cpu, PCADDR vpc);
